k8s/demos/ab-testing/service-version-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-resale-api-version-a-service
  namespace: vehicle-resale
  labels:
    app: vehicle-resale-api
    version: a
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: vehicle-resale-api
    version: a  # Roteia apenas para pods da versão A
