k8s/demos/ab-testing/service-version-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-resale-api-version-b-service
  namespace: vehicle-resale
  labels:
    app: vehicle-resale-api
    version: b
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: vehicle-resale-api
    version: b  # Roteia apenas para pods da versão B
